2013-07-09  Sabrina Ni  <sabrina@andestech.com>

	* configure.host (machine_dir, syscall_dir, newlib_cflags):
	Add settings for nds32*.
	* libc/include/machine/ieeefp.h (IEEE_BIG_ENDIAN, IEEE_LITTLE_ENDIAN):
	Ditto.
	* libc/include/machine/setjmp.h (JBLEN): Ditto.
	* libc/machine/configure.in: Add nds32 subdir.
	* libc/machine/configure: Regenerated.
	* libc/machine/nds32/Makefile.am: New.
	* libc/machine/nds32/Makefile.in: New (autogenerated).
	* libc/machine/nds32/aclocal.m4: New (autogenerated).
	* libc/machine/nds32/configure.in: New.
	* libc/machine/nds32/configure: New (autogenerated).
	* libc/machine/nds32/setjmp.S: New.

2013-07-09  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/config.h (__DYNAMIC_REENT__): Define for RTEMS.

2013-07-09  Bin Cheng  <bin.cheng@arm.com>

	* libc/stdio/fwalk.c (_fwalk): Remove redundant test.

2013-07-05  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/sys/types.h (u_char): Add redefinition guard.
	(u_short, u_int, u_long, caddr_t, daddr_t): Ditto.

2013-07-02  Joey Ye  <joey.ye@arm.com>

	Lite exit support.
	* README: Add information about lite-exit.
	* acconfig.h (_LITE_EXIT): New macro.
	* configure.in (enable-lite-exit): New option.
	(_LITE_EXIT): Define new macro.
	* configure: Regenerated.
	* newlib.hin (_LITE_EXIT): New macro.
	* libc/stdlib/__atexit.c [_LITE_EXIT]: Add dummy explicit 
	reference to __call_exitprocs.
	* libc/stdlib/cxa_atexit.c [_LITE_EXIT]: Make __register_exitproc a
	weak reference.
	* libc/stdlib/exit.c (exit)[_LITE_EXIT]: Remove TWS and weakly reference
	__call_exitprocs.

2013-07-02  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/sys/reent.h: Fix typo in comment.

2013-07-01  Will Newton  <will.newton@linaro.org>

	* libc/machine/arm/memcpy-armv7a.S: Adjust entry to
	 aligned loop to improve misaligned copy performance.

2013-06-26  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/stdio.h: Specify std streams always in terms
	of _REENT.